# study_design_pattern

./: pyproject.toml
creational_design_patterns/: factory_method.py
