[project]
name = "study-design-pattern"
version = "0.1.0"
description = ""
authors = [
    {name = "Phuc Huynh-Van",email = "laryhuynh96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
